force-app/main/default/objects/InsurancePolicy/fields/DSALES_Aseguradora__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Aseguradora__c</fullName>
    <formula>LOWER(TEXT(SourceQuote.DSALES_Aseguradora__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aseguradora</label>
    <type>Text</type>
</CustomField>