force-app/main/default/objects/InsurancePolicy/fields/DSALES_Genero__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Genero__c</fullName>
    <formula>TEXT(SourceQuote.dsalesGenero__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Género</label>
    <type>Text</type>
</CustomField>