force-app/main/default/objects/InsurancePolicy/fields/DSALES_NombredelAsegurado__c.field-meta.xml
<CustomField>
    <fullName>DSALES_NombredelAsegurado__c</fullName>
    <description>Campo para recibir el nombre del asegurado</description>
    <label>Nombre del Asegurado</label>
    <length>40</length>
    <type>Text</type>
</CustomField>