force-app/main/default/objects/InsurancePolicy/fields/DSALES_NumeroEndosoCancelacion__c.field-meta.xml
<CustomField>
    <fullName>DSALES_NumeroEndosoCancelacion__c</fullName>
    <description>Campo que lleva el conteo de endosos que tiene una póliza</description>
    <label>Número de endosos de cancelación</label>
    <summaryFilterItems>
        <field>DSALES_Endoso__c.DSALES_Estatus__c</field>
        <operation>equals</operation>
        <value>Autorizado</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>DSALES_Endoso__c.DSALES_Tipodeendoso__c</field>
        <operation>equals</operation>
        <value>Cancelación de la póliza</value>
    </summaryFilterItems>
    <summaryForeignKey>DSALES_Endoso__c.DSALES_Poliza__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>