force-app/main/default/objects/InsurancePolicy/fields/DSALES_TelefonoContacto__c.field-meta.xml
<CustomField>
    <fullName>DSALES_TelefonoContacto__c</fullName>
    <label>Teléfono de contacto</label>
    <type>Phone</type>
</CustomField>