force-app/main/default/objects/InsurancePolicy/fields/dsalesBeneficiarioPreferente__c.field-meta.xml
<CustomField>
    <fullName>dsalesBeneficiarioPreferente__c</fullName>
    <label>Beneficiario preferente</label>
    <length>10</length>
    <type>Text</type>
</CustomField>