force-app/main/default/objects/InsurancePolicy/fields/dsalesCalleConductor__c.field-meta.xml
<CustomField>
    <fullName>dsalesCalleConductor__c</fullName>
    <description>Campo para recibir la calle del conductor</description>
    <label>Calle del conductor</label>
    <length>40</length>
    <type>Text</type>
</CustomField>