force-app/main/default/objects/InsurancePolicy/fields/dsalesClaveEstadoConductor__c.field-meta.xml
<CustomField>
    <fullName>dsalesClaveEstadoConductor__c</fullName>
    <description>Campo para recibir la clave del estado del conductor</description>
    <label>Clave de estado del conductor</label>
    <length>2</length>
    <type>Text</type>
</CustomField>