force-app/main/default/objects/InsurancePolicy/fields/dsalesCodigoPostalConductor__c.field-meta.xml
<CustomField>
    <fullName>dsalesCodigoPostalConductor__c</fullName>
    <description>Campo para recibir el código postal del conductor</description>
    <label>Código postal del conductor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>