force-app/main/default/objects/InsurancePolicy/fields/dsalesCorreoElectronicoConductor__c.field-meta.xml
<CustomField>
    <fullName>dsalesCorreoElectronicoConductor__c</fullName>
    <description>Campo para guardar el correo electrónico del asegurado</description>
    <label>Correo electrónico del conductor</label>
    <type>Email</type>
</CustomField>