force-app/main/default/objects/InsurancePolicy/fields/dsalesEstatusPoliza__c.field-meta.xml
<CustomField>
    <fullName>dsalesEstatusPoliza__c</fullName>
    <description>Campo para revisar en que estatus se encuentra la póliza</description>
    <label>Estatus de póliza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prepoliza</fullName>
                <default>true</default>
                <label>Prepóliza</label>
            </value>
            <value>
                <fullName>En tramite</fullName>
                <label>En trámite</label>
            </value>
            <value>
                <fullName>Vigente</fullName>
            </value>
            <value>
                <fullName>Vencida</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>En solicitud</fullName>
                <isActive>false</isActive>
                <label>En solicitud</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>