force-app/main/default/objects/InsurancePolicy/fields/dsalesFechaNacimientoConductor__c.field-meta.xml
<CustomField>
    <fullName>dsalesFechaNacimientoConductor__c</fullName>
    <description>Campo para recibir el campo del conductor</description>
    <label>Fecha de nacimiento del conductor</label>
    <type>Date</type>
</CustomField>