force-app/main/default/objects/InsurancePolicy/fields/dsalesGeneroConductor__c.field-meta.xml
<CustomField>
    <fullName>dsalesGeneroConductor__c</fullName>
    <description>Género de conductor</description>
    <label>Género del conductor</label>
    <length>15</length>
    <type>Text</type>
</CustomField>