force-app/main/default/objects/InsurancePolicy/fields/dsalesNombreConductor__c.field-meta.xml
<CustomField>
    <fullName>dsalesNombreConductor__c</fullName>
    <description>Campo para recibir el nombre del conductor de la moto</description>
    <label>Nombre del conductor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>