force-app/main/default/objects/InsurancePolicy/fields/dsalesNumeroCredito__c.field-meta.xml
<CustomField>
    <fullName>dsalesNumeroCredito__c</fullName>
    <description>Número de crédito solicitado</description>
    <label>Número de credito</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>