force-app/main/default/objects/InsurancePolicy/fields/dsalesNumeroExteriorConductor__c.field-meta.xml
<CustomField>
    <fullName>dsalesNumeroExteriorConductor__c</fullName>
    <description>Campo para ingresar el numero exterior de la calle del conductor</description>
    <label>Número exterior del conductor</label>
    <length>6</length>
    <type>Text</type>
</CustomField>