force-app/main/default/objects/InsurancePolicy/fields/dsalesNumeroTelefonoConductor__c.field-meta.xml
<CustomField>
    <fullName>dsalesNumeroTelefonoConductor__c</fullName>
    <description>Campo para recibir el numero de teléfono del conductor</description>
    <label>Número de teléfono del conductor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>