force-app/main/default/objects/InsurancePolicy/fields/dsalesPlazoCredito__c.field-meta.xml
<CustomField>
    <fullName>dsalesPlazoCredito__c</fullName>
    <description>Número de plazos de credito</description>
    <label>Plazo Credito</label>
    <length>50</length>
    <type>Text</type>
</CustomField>