force-app/main/default/objects/InsurancePolicy/fields/dsalesPrimerApellidoConductor__c.field-meta.xml
<CustomField>
    <fullName>dsalesPrimerApellidoConductor__c</fullName>
    <description>Campo para almacenar el primer apellido del conductor</description>
    <label>Primer apellido del conductor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>