force-app/main/default/objects/InsurancePolicy/fields/dsalesQuote__c.field-meta.xml
<CustomField>
    <fullName>dsalesQuote__c</fullName>
    <description>Campo para almacenar el quote que envía INTER en la respuesta de emisión de póliza.</description>
    <label>Quote</label>
    <length>30</length>
    <type>Text</type>
</CustomField>