force-app/main/default/objects/InsurancePolicy/fields/dsalesQuoteId__c.field-meta.xml
<CustomField>
    <fullName>dsalesQuoteId__c</fullName>
    <description>Campo que almacena el ID de la cotización del seguro ganador y compartirlo en la emisión de póliza.</description>
    <label>Quote id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>