force-app/main/default/objects/InsurancePolicy/fields/dsalesRfcConductor__c.field-meta.xml
<CustomField>
    <fullName>dsalesRfcConductor__c</fullName>
    <label>RFC del conductor</label>
    <length>13</length>
    <type>Text</type>
</CustomField>