force-app/main/default/objects/InsurancePolicy/fields/dsalesSegundoApellidoConductor__c.field-meta.xml
<CustomField>
    <fullName>dsalesSegundoApellidoConductor__c</fullName>
    <description>Campo para recibir el segundo apellido del cliente</description>
    <label>Segundo apellido del conductor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>