force-app/main/default/objects/InsurancePolicy/fields/dsalesTipoServicio__c.field-meta.xml
<CustomField>
    <fullName>dsalesTipoServicio__c</fullName>
    <formula>TEXT(SourceQuote.dsalesTipoDeServicioDelVehiculo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de servicio</label>
    <type>Text</type>
</CustomField>