force-app/main/default/objects/InsurancePolicy/fields/dsalesTipoUso__c.field-meta.xml
<CustomField>
    <fullName>dsalesTipoUso__c</fullName>
    <formula>SourceQuote.DSALES_TipoUso__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de uso</label>
    <type>Text</type>
</CustomField>