force-app/main/default/objects/InsurancePolicy/fields/Fecha_de_emisi_n__c.field-meta.xml
<CustomField>
    <fullName>dsalesFechaDeEmision__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Fecha de emisión</label>
    <type>Date</type>
</CustomField>