force-app/main/default/objects/InsurancePolicy/recordTypes/dsalesSeguroCelulares.recordType-meta.xml
<RecordType>
    <fullName>dsalesSeguroCelulares</fullName>
    <active>true</active>
    <description>Registros de seguro de celulares</description>
    <label>Seguro de Celulares</label>
</RecordType>